[pgr] fix (gallery.scss): hide scrollbars css in firefox

--- a/pro-gallery-renderer/src/components/styles/gallery.scss
+++ b/pro-gallery-renderer/src/components/styles/gallery.scss
@@ -1499,6 +1499,7 @@
     .hide-scrollbars {
       -ms-overflow-style: none;
       overflow: -moz-scrollbars-none;
+      scrollbar-width: none;
 
       &::-webkit-scrollbar,
       ::-webkit-scrollbar {
