--- a/pro-gallery-renderer/src/components/styles/global.scss
+++ b/pro-gallery-renderer/src/components/styles/global.scss
@@ -221,7 +221,8 @@ body {
 .hide-scrollbars {
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
-
+  scrollbar-width: none;
+  
   &::-webkit-scrollbar,
   ::-webkit-scrollbar {
     width: 0 !important;
